# PTPSim

./: .gitignore  CMakeLists.txt  README.md  ptp.mac  ptp.sh  run.sh  vis.mac  vis_ground.mac  ~
plotter/: #twoDplot.py#  opticPlotter1.C  plotAllMaterials.C  twoDplot.py
ratdb/: MATERIALS_ptp.ratdb  OPTICS_sipm.ratdb  PMT.ratdb  PMTCHARGE.ratdb  PMTTRANSIT.ratdb  ptp.ratdb  ptp.ratdb.g4values  ptp.ratdb.original
ratdb/Ptp/: PMTINFO.ratdb  ptp.geo  ptp2.geo  ptp3.geo
src/: CMakeLists.txt  GeoPTPCoatingFactory.cc  LaserballGenerator.cc  Ptp.cc  sipmConstruction.cc  sipmConstruction.hh
src/include/: Config.hh  GeoPTPCoatingFactory.hh  GeoPtpFactory.hh  LaserballGenerator.hh  Ptp.hh
